Fix reporting of type for unique key on VARCHAR field. (Bug #11227)

mysql-test/r/key.result:
  Add new results
mysql-test/t/key.test:
  Add new regression test
sql/table.cc:
  Use keyinfo->key_parts to determine if key is part of a
  multiple-field key or is unique.